Add GitHub Actions workflow for EB deployment

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -3,7 +3,7 @@ name: Deploy to Elastic Beanstalk
 on:
   push:
     branches:
-      - main  # deploy only when main branch is pushed
+      - main
 
 jobs:
   deploy:
@@ -19,16 +19,22 @@ jobs:
         distribution: temurin
         java-version: 17
 
+    - name: Make Maven wrapper executable
+      run: chmod +x ./mvnw
+
     - name: Build Spring Boot Jar
       run: ./mvnw clean package -DskipTests
+
+    - name: List files in target
+      run: ls -l target/
 
     - name: Deploy to Elastic Beanstalk
       uses: einaregilsson/beanstalk-deploy@v21
       with:
         aws_access_key: ${{ secrets.AWS_ACCESS_KEY_ID }}
         aws_secret_key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-        region: us-east-1                    # your EB region
-        application_name: Hello-eb-demo      # your EB app name
-        environment_name: Hello-eb-demo-env  # your EB environment name
-        version_label: ${{ github.sha }}     # Git commit hash as version
-        artifact: target/demo-0.0.1-SNAPSHOT.jar  # your jar file
+        region: us-east-1
+        application_name: demo-app
+        environment_name: demo-env
+        version_label: ${{ github.sha }}
+        artifact: target/demo-0.0.1-SNAPSHOT.jar
