Add GitHub Actions workflow for EB deployment

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -18,6 +18,9 @@ jobs:
       with:
         distribution: temurin
         java-version: 17
+        
+    - name: Make Maven Wrapper Executable
+      run: chmod +x ./mvnw
 
     - name: Build Spring Boot Jar
       run: ./mvnw clean package -DskipTests
