--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -31,7 +31,7 @@ jobs:
         aws_access_key: ${{ secrets.AWS_ACCESS_KEY_ID }}
         aws_secret_key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
         region: us-east-1
-        application_name: Hello-eb-demo
+        application_name: hello-eb-demo
         environment_name: Hello-eb-demo-env
         version_label: ${{ github.sha }}
         deployment_package: target/demo-0.0.1-SNAPSHOT.jar  # Correct input
